updated sections for version 17 changes